
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 FEB 22a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - Fixed problems in 3 reactions which did not conserve the elements
    

2024 FEB 21d
  * in model/share/transport_share.c
    - added _mueN_O2()
  * in model/transport/doc/report.tex
    - added plots for mobility in O2 gas
    

2024 FEB 21c
  * in model/transport/_Dixon-Lewis/transport.c
    - in _mueNk_from_Te(), added a fatal_error if spec is not neutral
  * in model/transport/_Gupta-Yos/transport.c
    - changed _mueNk_from_Te() so that it used the Gupta-Yos cross sections and not the 
      Parent-Macheret ones
  * in src/test.c
    - added the function test_mueN() and the option mueN


2024 FEB 21b
  * in model/share/transport_share.c
    - in _lnLambda(), made sure rhoe is at least 1E-20 kg/m3, otherwise this leads
      to a NaN
    - in _mue_from_Te_rhok(), changed the implementation so that it matches the latest 
      model/fluid/doc/Transport_Equations/report.tex
    - in _mueN_N2(), added latest spline fit 
  * in model/transport/doc/report.tex
    - added N2 mobility figure
    

2024 FEB 21a 
  * in model/fluid/doc/Transport_Equations/report.tex
    - added better explanations in the charged species momentum equation section
  * in model/share/transport_share.c
    - renamed _mueNk_from_Te() to _mueNk_from_Te_ParentMacheret()
  * in model/transport/*/transport.c
    - added _mueNk_from_Te() which calls _mueNk_from_Te_ParentMacheret()
  * in model/transport/doc/report.tex
    - added electron temperature data to Table 2


2024 FEB 20a
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the section "Charged Species Momentum Equation", added a derivation of the drift-diffusion