@@ -262,3 +262,14 @@ Calculations to 30 000 K",
   year={1973},
   publisher={CSIRO Publishing}
 }
+
+@article{jopd:2005:lisovskiy,
+  title={Electron drift velocity in NH3 in strong electric fields determined from rf breakdown curves},
+  author={Lisovskiy, Valeriy and Martins, Sofia and Landry, Karine and Douai, David and Booth, Jean-Paul and Cassagne, Valerick},
+  journal={Journal of Physics D: Applied Physics},
+  volume={38},
+  number={6},
+  pages={872},
+  year={2005},
+  publisher={IOP Publishing}
+}
