@@ -442,7 +442,36 @@ where $(c_p)_k$ is the specific heat at constant pressure of the $k$th species a
     \end{tabular}
 \end{table}
 %
+\begin{table}[!htbp]
+  \center\fontsizetable
+  \begin{threeparttable}
+    \tablecaption{Coordinates of control points for monotone cubic spline interpolation of electron mobility in various mixtures\tnote{a}.}
+    \label{tab:spline_tab}
+    \fontsizetable
+    \begin{tabular*}{\textwidth}{c@{\extracolsep{\fill}}lcll}
+    \toprule
+   No. & Process ~& Variable & Spline control point coordinates  \\
+        \midrule
 
+          
+  \multirow{2}{*}{1} &  \multirow{2}{*}{ $\rm e^- + N_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny 5.7038    6.0067    7.5266    9.0580    9.2866    9.6956   10.0010   10.7942   11.3595   13.1075   14.4873     \\
+  &  & ${\rm ln}~\mu_{\rm e}N$     & \tiny  58.8996   58.6144   57.2080   56.0505   55.8498   55.4609   55.2620   55.2282   55.0865   54.4855   54.2678  \\
+  \midrule  
+  \multirow{2}{*}{2} &  \multirow{2}{*}{ $\rm e^- + O_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny     5.7038    7.3930    8.1552    8.6458    9.4545   10.2346   10.5829   11.1835   11.8793   13.6691   14.3029 \\
+  &  & ${\rm ln}~\mu_{\rm e}N$     & \tiny  58.8730   57.5646   57.2544   56.9107   56.3934   56.1375   55.7320   55.6127   55.1276   54.3525   54.2716    \\
+  \midrule  
+  \multirow{2}{*}{3} &  \multirow{2}{*}{ $\rm e^- + NH_3  $   } & ${\rm ln}~T_{\rm e}$  & \tiny     5.7038    6.1905    6.2414    7.0362    9.5653   10.0472   10.4282   10.7074   11.2676   11.7446   13.0609   14.9141 \\
+  &  & ${\rm ln}~\mu_{\rm e}N$   & \tiny 58.8996   58.6144   57.2080   56.0505   55.8498   55.4609   55.2620   55.2282   55.0865   54.4855   54.2678 \\
+     
+ 
+                       
+    \bottomrule
+    \end{tabular*}
+\begin{tablenotes}
+\item[{a}] Notation and units: $T_{\rm e}$ is the electron temperature in Kelvin and $\mu_{\rm e}N$ is product of mobility and mixture number density in units of $\rm V^{-1}m^{-1}s^{-1}$.
+\end{tablenotes}
+   \end{threeparttable}
+\end{table}
 %
 \begin{table*}[b]
   \center
@@ -486,7 +515,14 @@ where $(c_p)_k$ is the specific heat at constant pressure of the $k$th species a
 \caption{Results for the mobility of electrons in ${\rm O_2}$, showing (a) product of mobility and number density, and (b) error percentage of cubic spline fit of  mobility data. The BOLSIG+ calculation uses electron impact cross sections from the Morgan database in Ref.\ \citen{jcp:2012:morgan}. Experimental data obtained from Ch.\ 21 of Ref.\ \citen{book:1997:grigoriev} and Fig. 4 of Ref.\ \citen{ajp:1973:crompton}}
 \label{fig:mobility_O2}
 \end{figure}
-
+%
+\begin{figure}
+\centering
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{figs/mobility_NH3.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{figs/mobility_NH3_error.png}}
+\caption{Results for the mobility of electrons in ${\rm NH_3}$, showing (a) product of mobility and number density, and (b) error percentage of cubic spline fit of  mobility data. The BOLSIG+ calculation uses electron impact cross sections from the Morgan database in Ref.\ \citen{jcp:2012:morgan}. Experimental data obtained from Fig. 2 of Ref.\ \citen{jopd:2005:lisovskiy}}
+\label{fig:mobility_NH3}
+\end{figure}
 
 
 \subsection{Electron Mobility}
